--- a/trakberry/templates/tech.html
+++ b/trakberry/templates/tech.html
@@ -73,6 +73,16 @@
     -moz-border-radius: 6px 0 6px 6px;
     border-radius: 6px 0 6px 6px;
 }
+
+
+.frame1 {color:rgb(0, 0, 0);text-align:center;background:rgb(41, 212, 147);float:left;width:75%}
+.frame2{color:black;text-align:center;background:rgb(253, 186, 186);float:left;width:20%;position:relative;left:5px;}
+.body1{color:black;text-align:left;background:rgb(197, 253, 186);border: .4px solid rgb(0, 0, 0);width:100%}
+
+
+.comment4 {}
+
+}
 </style>
 <!-- **************************** -->
 
@@ -112,7 +122,7 @@
 
 <body>
 
-<img alt="full screen background image" src="{{request.session.login_back}}?{{TCUR}}" id="full-screen-background-image"/>
+<img alt="full screen background image" src="/static/media/back_tech_training.jpg" id="full-screen-background-image"/>
 
 <!--
 
@@ -151,7 +161,7 @@
                 <span class="icon-bar"></span>
             </button>
 			<font color="#ffffff" size ="3"><b>Tech App</b></b></font>
-			<img src="{{request.session.login_image}}?{{TCUR}}"  style="border-radius: 25px;" height="60" width="70">
+			<img src="/static/media/tech_training.jpg"  style="border-radius: 25px;" height="60" width="70">
             <a class="navbar-brand" href="#" style="position:absolute;left:0px;top:-10px;"></a>
         </div>
         <div class="collapse navbar-collapse">
@@ -231,7 +241,8 @@
 
 
 
-
+	<div class ="mainset">
+		<div class="frame1" >
 
 
 <!-- *********************** -->
@@ -239,24 +250,20 @@
 
 
 {% for i in L %}
-    <div class="row">
-		<div class="col-sm-8" style="background-color: #EBEBEB;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">{{i.0}}</div>
-		
 
-	</div>	
-    <div class="row">
-		
-		<div class="col-sm-8" style="background-color: #EBEBEB;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">{{ i.1}}</div>
-		
-	</div>	
-    <div class="row">
-		
-		<div class="col-sm-8" style="background-color: #EBEBEB;border-radius:0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
-		
-		<center><a href="{{request.session.local_toggle}}/jcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
-		</div>
+<div class="comment4" style="font-size:25px;background-color: #97f58e;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;">{{i.0}} BOOO</div>
 
-	</div>	
+		<br>
+		<font style="font-size:15px;background-color: #EBEBEB;border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;">{{i.1}}</font>	
+
+		
+		<font style="font-size:15px;background-color: #EBEBEB;border-radius:0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><b>
+		
+<a href="{{request.session.local_toggle}}/jcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></a>
+		</font>
+
+		<a href="https://google.com" class="button" style="text-align: left;width:100%;padding-top:8px;padding-bottom:8px;padding-left:8px;font-size: 75%;border:0px solid rgb(0, 0, 0);
+		background-color: rgb(176,176,176);border:none;outline:none;">Go to Google</a>
     <div class="row">
 		
 
@@ -269,6 +276,9 @@
 	</div>		
 <br>
 {% endfor %}
+
+</div>
+</div>
 </div>
 {% endblock %}
 </form>
