--- a/trakberry/templates/test21.html
+++ b/trakberry/templates/test21.html
@@ -6,10 +6,13 @@
 	<br><br><br>
 	
 	
-TEST
+{% for i in request.session.epv_checks %}
+{{i.1}}--- {{i.2}}---{{i.3}} ---{{i.4}}---{{i.5}}---{{i.8}}  <br>
+{% endfor %}
 
 <br>
-<br><br>
+<br><br><br><br><br><br>
+Length:{{request.session.b}}
 
 </body>
 </html>
