--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -1,65 +1,65 @@
 <html>
-    <head>
+		<head>
 
-      <title>Main APP</title>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-        
-      <script src="/static/bootstrap/js/1.11.3/jquery.min.js"></script>
-      <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+			<title>Main APP</title>
+			<meta charset="utf-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+				
+			<script src="/static/bootstrap/js/1.11.3/jquery.min.js"></script>
+			<script src="/static/bootstrap/js/bootstrap.min.js"></script>
 			<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
 			
 			<link href="/static/bootstrap/css/bootstrap-toggle/bootstrap-toggle.min.css" rel="stylesheet">
 			<script src="/static/bootstrap/css/bootstrap-toggle/bootstrap-toggle.min.js"></script>
 			<link rel="stylesheet" href="/static/style_1/maint_mgmt.css?{{request.session.TCUR}}">  <!-- include the proper styling -->
 
-      {% block grid %}
-	  {% endblock %}
-	  
+			{% block grid %}
+		{% endblock %}
+		
 <style>
 .dropdown-submenu {
-    position: relative;
+		position: relative;
 }
 .dropdown-submenu>.dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -6px;
-    margin-left: -1px;
-    -webkit-border-radius: 0 6px 6px 6px;
-    -moz-border-radius: 0 6px 6px;
-    border-radius: 0 6px 6px 6px;
+		top: 0;
+		left: 100%;
+		margin-top: -6px;
+		margin-left: -1px;
+		-webkit-border-radius: 0 6px 6px 6px;
+		-moz-border-radius: 0 6px 6px;
+		border-radius: 0 6px 6px 6px;
 }
 .dropdown-submenu:hover>.dropdown-menu {
-    display: block;
+		display: block;
 }
 .dropdown-submenu>a:after {
-    display: block;
-    content: " ";
-    float: right;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #ccc;
-    margin-top: 5px;
-    margin-right: -10px;
+		display: block;
+		content: " ";
+		float: right;
+		width: 0;
+		height: 0;
+		border-color: transparent;
+		border-style: solid;
+		border-width: 5px 0 5px 5px;
+		border-left-color: #ccc;
+		margin-top: 5px;
+		margin-right: -10px;
 }
 .dropdown-submenu:hover>a:after {
-    border-left-color: #ff;
+		border-left-color: #ff;
 }
 .dropdown-submenu.pull-left {
-    float: none;
+		float: none;
 }
 .dropdown-submenu.pull-left>.dropdown-menu {
-    left: -100%;
-    margin-left: 10px;
-    -webkit-border-radius: 6px 0 6px 6px;
-    -moz-border-radius: 6px 0 6px 6px;
-    border-radius: 6px 0 6px 6px;
+		left: -100%;
+		margin-left: 10px;
+		-webkit-border-radius: 6px 0 6px 6px;
+		-moz-border-radius: 6px 0 6px 6px;
+		border-radius: 6px 0 6px 6px;
 }	
 .headcol {
-  position: absolute;
+	position: absolute;
 }
 }
 </style>
@@ -67,114 +67,113 @@
 
 
 
-    </head>
-    
-    <body style="background-color:rgb(51,51,51);">
-    
-    <div class="navbar navbar-default navbar-fixed-top" style="background-color:rgb(0, 0, 0);border-color:rgb(255, 255, 255);border-width:1px" role="navigation">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="#" style="position:absolute;left:0px;top:-10px;">
+		</head>
+		
+		<body style="background-color:rgb(51,51,51);">
+		
+				<div class="navbar navbar-default navbar-fixed-top" style="background-color:rgb(0, 0, 0);border-color:rgb(255, 255, 255);border-width:1px" role="navigation">
+					<div class="container">
+						<div class="navbar-header">
+								<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+										<span class="sr-only">Toggle navigation</span>
+										<span class="icon-bar"></span>
+										<span class="icon-bar"></span>
+										<span class="icon-bar"></span>
+								</button>
+								<a class="navbar-brand" href="#" style="position:absolute;left:0px;top:-10px;">
 
-                </a>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav" >
+								</a>
+						</div>
+						<div class="collapse navbar-collapse">
+							<ul class="nav navbar-nav" >
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Apps<b class="caret"></font></b></a>
+									<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
+										<li><a href="{{request.session.local_toggle}}/main">Supervisor</a></li>
+										<li><a href="{{request.session.local_toggle}}/maint_mgmt_auto">Maintenance Manager</a></li>
+										<li><a href="{{request.session.local_toggle}}/mgmt">Production Manager</a></li>
+										<li><a href="{{request.session.local_toggle}}/scrap_mgmt">Quality Manager</a></li>
+										<li class="divider"></li> 
+										<li><a href="{{request.session.local_toggle}}/tech_logout">Tech App</a></li>  
+										<li><a href="{{request.session.local_toggle}}/maint">Maintenance App</a></li>  
+										<li><a href="{{request.session.local_toggle}}/forklift">Forklift App</a></li>  
+										<li><a href="{{request.session.local_toggle}}/barcode_initial_10R">10R80 Barcode Scanner</a></li>  
+										<li><a href="{{request.session.local_toggle}}/barcode_initial">AB1V Barcode Scanner</a></li>  
+										<li class="divider"></li> 
+										<li><a href="{{request.session.local_toggle}}/kiosk_menu">Production Kiosk</a></li>  
+										<li><a href="{{request.session.local_toggle}}/kiosk_scrap">Scrap Kiosk</a></li> 
+										<li><a href="{{request.session.local_toggle}}/hrly_display">Supervisor TV Hourly Display</a></li>  
+									</ul>
+								</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 
-                        <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                        <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Apps<b class="caret"></font></b></a>
-                         <ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
-                            <li><a href="{{request.session.local_toggle}}/main">Supervisor</a></li>
-                            <li><a href="{{request.session.local_toggle}}/maint_mgmt_auto">Maintenance Manager</a></li>
-							<li><a href="{{request.session.local_toggle}}/mgmt">Production Manager</a></li>
-							<li><a href="{{request.session.local_toggle}}/scrap_mgmt">Quality Manager</a></li>
-							<li class="divider"></li> 
-							<li><a href="{{request.session.local_toggle}}/tech_logout">Tech App</a></li>  
-							<li><a href="{{request.session.local_toggle}}/maint">Maintenance App</a></li>  
-							<li><a href="{{request.session.local_toggle}}/forklift">Forklift App</a></li>  
-							<li><a href="{{request.session.local_toggle}}/barcode_initial_10R">10R80 Barcode Scanner</a></li>  
-							<li><a href="{{request.session.local_toggle}}/barcode_initial">AB1V Barcode Scanner</a></li>  
-							<li class="divider"></li> 
-							<li><a href="{{request.session.local_toggle}}/kiosk_menu">Production Kiosk</a></li>  
-							<li><a href="{{request.session.local_toggle}}/kiosk_scrap">Scrap Kiosk</a></li> 
-							<li><a href="{{request.session.local_toggle}}/hrly_display">Supervisor TV Hourly Display</a></li>  
-                        </ul>
-                        </li>
-			    	    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
-							<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
-								<li><a href="{{request.session.local_toggle}}/production_entry_check_manual">Production Check Manual</a></li>
-								<li><a href="{{request.session.local_toggle}}/test_1_10R">Test</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Mid">Mid Area 1</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Days">Days Area 1</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Aft">Aft Area 1</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*3*Days">Days Area 2</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*3*Mid">Mid Area 2</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*3*Aft">Aft Area 2</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*4*Day">Days Area 3</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*4*Aft">Aft Area 3</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*4*Mid">Mid Area 3</a></li>
-								<li><a href="{{request.session.local_toggle}}/mgmt_priorities">Priorities</a></li>
-								<li><a href="{{request.session.local_toggle}}/tracking_10R80">Track 10R80</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_check">Production Entry Check</a></li>
-								<li><a href="{{request.session.local_toggle}}/production_entry_fix">Production Entry Fix</a></li>
+								<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
+									<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
+										<li><a href="{{request.session.local_toggle}}/production_entry_check_manual">Production Check Manual</a></li>
+										<li><a href="{{request.session.local_toggle}}/test_1_10R">Test</a></li>
+										<li class="dropdown-submenu">
+											<a href="#" class="dropdown-toggle" data-toggle="dropdown">Production Verification</a>
+											<ul class="dropdown-menu" style="background-color:rgb(202,230,127);">
+												<li class="dropdown-submenu">
+													<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Mid">Mid Area 1</a></li>
+													<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Days">Days Area 1</a></li>
+													<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*1*Aft">Aft Area 1</a></li>
+													<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*3*Days">Days Area 2</a></li>
+													<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*3*Mid">Mid Area 2</a></li>
+													<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*3*Aft">Aft Area 2</a></li>
+													<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*4*Day">Days Area 3</a></li>
+													<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*4*Aft">Aft Area 3</a></li>
+													<li><a href="{{request.session.local_toggle}}/production_entry_fix_shift/get/Plant*4*Mid">Mid Area 3</a></li>
+												</li>
+											</ul>
+										</li>
+										<li><a href="{{request.session.local_toggle}}/mgmt_priorities">Priorities</a></li>
+										<li><a href="{{request.session.local_toggle}}/tracking_10R80">Track 10R80</a></li>
+										<li><a href="{{request.session.local_toggle}}/production_entry_check">Production Entry Check</a></li>
+										<li><a href="{{request.session.local_toggle}}/production_entry_fix">Production Entry Fix</a></li>
+										<li><a href="{{request.session.local_toggle}}/prediction1">Prediction</a></li>
+										<li><a href="{{request.session.local_toggle}}/scrapdate_fix1">Fix Scrap Date</a></li>
+										<li><a href="{{request.session.local_toggle}}/scrap_backup">Scrap Backup</a></li>
+										<li><a href="{{request.session.local_toggle}}/scrap_restore">Scrap Restore</a></li>
+										<li><a href="{{request.session.local_toggle}}/manpower_update_v2">Manpower Update</a></li>
+										<li><a href="{{request.session.local_toggle}}/matrix_update_v2">Matrix Update</a></li>
+										<li><a href="{{request.session.local_toggle}}/tracking">TRACK</a></li>
+										<li><a href="{{request.session.local_toggle}}/training_matrix3">Matrix</a></li>
+										<li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
+										<li class="dropdown-submenu">
+											<a href="#" class="dropdown-toggle" data-toggle="dropdown">Excel Dump</a>
+											<ul class="dropdown-menu"  style="background-color:rgb(202, 230, 127);">
+												<li class="dropdown-submenu">
+													<li><a href="{{request.session.local_toggle}}/excel_dump">Dump Excel Default Sheet</a></li> 
+												</li>
+												<li class="dropdown-submenu"  style="background-color:rgb(202, 230, 127);"> 
+										 			<li><a href="{{request.session.local_toggle}}/excel_scrap_dump">Dump Excel Scrap Sheets</a></li> 
+												</li>
+											</ul>
+										</li>  
+										<li><a href="/switch_local">Switch to Local Deployment</a></li>
+										<li><a href="/trakberry/switch_net">Switch to Server Deployment</a></li>
+										<li><a href="{{request.session.local_toggle}}/create_table_1">Create DB</a></li> 
+										<li><a href="{{request.session.local_toggle}}/medium_production">Generate Medium Production</a></li> 
+										<li><a href="{{request.session.local_toggle}}/auto_updater">Auto Updater</a></li> 
+										<li><a href="{{request.session.local_toggle}}/trained_email">Trained Email</a></li> 
+									</ul>  
+								</li>
 
-								<li><a href="{{request.session.local_toggle}}/prediction1">Prediction</a></li>
-
-								<li><a href="{{request.session.local_toggle}}/scrapdate_fix1">Fix Scrap Date</a></li>
-								<li><a href="{{request.session.local_toggle}}/scrap_backup">Scrap Backup</a></li>
-								<li><a href="{{request.session.local_toggle}}/scrap_restore">Scrap Restore</a></li>
-								<li><a href="{{request.session.local_toggle}}/manpower_update_v2">Manpower Update</a></li>
-								<li><a href="{{request.session.local_toggle}}/matrix_update_v2">Matrix Update</a></li>
-								<li><a href="{{request.session.local_toggle}}/tracking">TRACK</a></li>
-								<li><a href="{{request.session.local_toggle}}/training_matrix3">Matrix</a></li>
-							   <li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
-
-							   <li class="dropdown-submenu">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Excel Dump</a>
-										<ul class="dropdown-menu"  style="background-color:rgb(202, 230, 127);">
-											<li class="dropdown-submenu">
-												<!-- <li><a href="#">Rotation</a></li>   -->
-												<li><a href="{{request.session.local_toggle}}/excel_dump">Dump Excel Default Sheet</a></li> 
-											</li>
-											<li class="dropdown-submenu"  style="background-color:rgb(202, 230, 127);"> 
-												<!-- <li><a href="#">Generate Schedule</a></li>  -->
-									   			<li><a href="{{request.session.local_toggle}}/excel_scrap_dump">Dump Excel Scrap Sheets</a></li> 
-											</li>
-											
-										</ul>
-								</li>  
-							   <li><a href="/switch_local">Switch to Local Deployment</a></li>
-							   <li><a href="/trakberry/switch_net">Switch to Server Deployment</a></li>
-							   <li><a href="{{request.session.local_toggle}}/create_table_1">Create DB</a></li> 
-								 <li><a href="{{request.session.local_toggle}}/medium_production">Generate Medium Production</a></li> 
-								 <li><a href="{{request.session.local_toggle}}/auto_updater">Auto Updater</a></li> 
-								 <li><a href="{{request.session.local_toggle}}/trained_email">Trained Email</a></li> 
-
- 
-						   </ul>  
-						</li>
-			    	    <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-						<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-			    	    <li><a href="#"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-folder-open"></span> Extras</a></font></li>
-			            </ul>	
-
-            </div>
-        </div>
-    </div>
-    <br><br><br><br><br>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+								<li><a href="#"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-folder-open"></span> Extras</a></font></li>
+							</ul>	
+						</div>
+					</div>
+				</div>
+		<br><br><br><br><br>
 	{% block content %}
 	{% endblock %}
 </body></html>
