--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -39,7 +39,7 @@
 													<li class="dropdown-submenu">
 														<li><a href="#">TMP Report</a></li>
 														<li><a href="#">EPV Report</a></li>
-														<li><a href="{{request.session.local_toggle}}/tpm_assets">Edit TPM Assets</a></li>
+														<li><a href="{{request.session.local_toggle}}/tpm_display">Edit TPM Assets</a></li>
 														<li><a href="{{request.session.local_toggle}}/tpm_assets">Edit EPVs</a></li>
 													</li>
 												</ul>
