--- a/trakberry/templates/scrap_mgmt_style.html
+++ b/trakberry/templates/scrap_mgmt_style.html
@@ -14,10 +14,10 @@
 	table{position: absolute; z-index: 2;  top: 20%; text-align: center; border-collapse: collapse;
 	border-spacing: 0; box-shadow: 0 2px 15px rgba( 64,64,64,.7); border-radius: 12px 12px 0 0; overflow: hidden;}
 	table.center{margin-left: 15%; margin-right: 15%; width: 70%;}
-	td , th {padding: 15px 20px;}
+	td , th {padding: 1px 5px;}
 	th{background-color: #a8b4a9; color: #fafafa; font-weight: 200; text-transform: uppercase; text-align: center;}
 	tr{width: 100%; background-color: #fafafa;}
-	tr:nth-child(even){background-color: #eeeeee;}
+	tr:nth-child(even){background-color: #dae0c8;}
 	.frame1 {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:40%}
 	.frame2{color:black;text-align:center;background:rgb(253, 186, 186);float:left;width:30%;position:relative;left:5px;}
 	.frame3{color:black;text-align:center;background:rgb(42, 165, 83);float:left;width:25%;position:relative;left:10px;}
