--- a/trakberry/templates/tpm_list.html
+++ b/trakberry/templates/tpm_list.html
@@ -1,43 +1,28 @@
 {% extends "scrap_mgmt.html" %}
 
-
 {% block content %}
-<!-- <a href="{{request.session.local_toggle}}/mgmt_display_edit/get/{{ i.0 }}" class="blue"></a> -->
 
-<table class="center">
-	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Last 24hrs Scrap Summary</b></u></font></th></tr>
-
-	<font size ="2" style="color:rgb(100, 100, 100)">
+<form action="" method="post">{% csrf_token %}
 	
+	<button style="text-align: left;font-size: 50%;border:0px solid rgb(0, 0, 0);
+	background-color:rgb(158, 158, 158);border-radius: 10px;border:none;outline:none;"
+	type="submit" name="one" value="choose1" /><b><font color="#000000">+/-</font></</button>
+
+<table style="margin-left: 35%; margin-right: 15%; width: 20%;">
+	<tr><th colspan="3"><font size="4" style="color:rgb(255, 255, 255)"><b><u>Asset List</b></u></font></th></tr>
+	<font size ="2" style="color:rgb(100, 100, 100)">
 	</font>
 	<tr>
-		<th>Part Number</th>
-		<th>Scrap Amount</th>
-		<th>Cost</th>
-		<!-- <th>Scrap Cost</th> -->
+		<th>Asset Requiring TPM</th>
 	</tr>
-	{% for i in request.session.tmp_scrap %}
+	{% for i in request.session.tpm_list %}
 	<tr>
-		
-		<td>
-			<!-- <a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.1}}</a> -->
-			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{i.1}}">{{i.1}}</a>
-
+		<td> 
+			<a href="{{request.session.local_toggle}}/tpm_edit/get/{{i.0}}">{{ i.1|slice:":-2" }}</a>
 		</td>
-		<td>
-			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">{{i.0}}</a>
-		</td>
-		<td>
-			<a href="{{request.session.local_toggle}}/scrap_display_operation/get/{{ i.1 }}">$ {{i.2}}</a>
-		</td>
-		<!-- <td>
-			<div contenteditable="true">{{i.6}}</div>
-		</td> -->
 	</tr>
-	
 {% endfor %}
-
 </table>
 
-
+</form>
 {% endblock %}
