--- a/trakberry/templates/kiosk/kiosk_production_entry.html
+++ b/trakberry/templates/kiosk/kiosk_production_entry.html
@@ -71,7 +71,7 @@ mark {
 	</div>
 	
 	
-	<div class="item2"><font color="#000000" size ="5"><u><b>Clock {{request.session.variable3}}</b></u></font></div>
+	<div class="item2"><font color="#000000" size ="5"><u><b>Clock</b></u></font></div>
 	<div class="item2"><font color="#000000" size ="5"><u><b>Date</b></u></font></div>
 	<div class="item2"></div>
 	<div class="item2"><font color="#000000" size ="5"><u><b>Shift</b></u></font></div>
