updated buttons for select all tpm/epv

--- a/trakberry/templates/kiosk/kiosk_epv_entry.html
+++ b/trakberry/templates/kiosk/kiosk_epv_entry.html
@@ -87,11 +87,12 @@ mark {
 	<div class="item2"> </div>
 	<div class="item2"> </div>
 
-	<div class="item2"><input style="background-color: #AAA00A;border-radius: 10px;width:90px;height:40px;font-weight: 700;font-size:23px;align=left;" type="submit" name="kiosk_epv_button" value="Enter"></div>
-	<div class="item2"><p>
-		<input type="button" onclick='selectAll()' value="Select All"/>
-		<input type="button" onclick='UnSelectAll()' value="Unselect All"/>
-	</p> </div>
+	<div class="item2"><input style="background-color: #AAA00A;border-radius: 10px;width:90px;height:40px;font-weight: 700;font-size:23px;align=left;" type="submit" name="kiosk_epv_button" value="Enter">
+		<br><input style="background-color: #f1ff2a;border-radius: 10px;width:70px;height:30px;font-weight: 600;font-size:12px;align=left;" type="button" onclick='selectAll()' value="Select All"/>
+		<input style="background-color: #f1ff2a;border-radius: 10px;width:70px;height:30px;font-weight: 600;font-size:12px;align=left;" type="button" onclick='UnSelectAll()' value="Clear All"/>
+</div>
+	<div class="item2">
+	</div>
 	<div class="item2"></div>
 	<div class="item2"> </div>
 	<div class="item2"><button style="background-color: #AAAAAA;border-radius: 10px;width:90px;height:40px;font-weight: 700;font-size:23px;align=left;" type="submit" name="kiosk_epv_button" value="Cancel">Cancel</button></div>
