--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -20,6 +20,14 @@
 		function R1467(){location.replace("{{request.session.local_toggle}}/chart2_1467")}
 		function L3050(){location.replace("{{request.session.local_toggle}}/chart1_3050")}
 		function R3050(){location.replace("{{request.session.local_toggle}}/chart2_3050")}
+		function L5710(){location.replace("{{request.session.local_toggle}}/chart1_5710")}
+		function R5710(){location.replace("{{request.session.local_toggle}}/chart2_5710")}
+		function L1467b(){location.replace("{{request.session.local_toggle}}/chart1_1467b")}
+		function R1467b(){location.replace("{{request.session.local_toggle}}/chart2_1467b")}
+		function L3050b(){location.replace("{{request.session.local_toggle}}/chart1_3050b")}
+		function R3050b(){location.replace("{{request.session.local_toggle}}/chart2_3050b")}
+		function L5710b(){location.replace("{{request.session.local_toggle}}/chart1_5710b")}
+		function R5710b(){location.replace("{{request.session.local_toggle}}/chart2_5710b")}
 		function L934130(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP30")}
 		function R934130(){location.replace("{{request.session.local_toggle}}/chart2_9341_OP30")}
 		function L934180(){location.replace("{{request.session.local_toggle}}/chart1_9341_OP80")}
@@ -332,30 +340,40 @@
 	<p><b><u>Tracking</u></b></p>	
 	
 	
-	<br>
-	<button onclick="L1467()">Left</button> (1467 INSP) <button onclick="R1467()">Right</button>
-	<br>
-	<button onclick="L3050()">Left</button> (3050 INSP) <button onclick="R3050()">Right</button>
-	<br>
-	<button onclick="L9341()">Left</button> (9341 INSP) <button onclick="R9341()">Right</button>
-	<br>
-	<button onclick="L934130()">Left</button> (9341 OP30) <button onclick="R934130()">Right</button>
-	<br>
-	<button onclick="L934180()">Left</button> (9341 OP80) <button onclick="R934180()">Right</button>
-	<br>
-	<button onclick="L9341110()">Left</button> (9341 OP110) <button onclick="R9341110()">Right</button>
-	<br>
-	<button onclick="L0455()">Left</button> (0455 INSP) <button onclick="R0455()">Right</button>
-	<br>
-	<button onclick="L521430()">Left</button> (5214 OP30) <button onclick="R521430()">Right</button>
-	<br>
-	<button onclick="L321430()">Left</button> (3214 OP30) <button onclick="R321430()">Right</button>
-	<br>
-	<button onclick="L867080()">Left</button> (8670 OP80) <button onclick="R867080()">Right</button>
-	<br>
-	<button onclick="L540480()">Left</button> (5404 OP80) <button onclick="R540480()">Right</button>
-	<br>
-	<button onclick="L540180()">Left</button> (5401 OP80) <button onclick="R540180()">Right</button>
+	<table style="width:90%;border: 0px solid black;">
+	<tr><td>
+	<button onclick="L1467()">Left</button> </td><td>(1467 INSP)</td><td>  <button onclick="R1467()">Right</button>
+	</td></tr><tr><td>
+	<button onclick="L3050()">Left</button></td><td> (3050 INSP)</td><td>  <button onclick="R3050()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L5710()">Left</button></td><td>  (5710 INSP) </td><td> <button onclick="R5710()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L1467b()">Left</button></td><td>  (1467 Broach)</td><td>  <button onclick="R1467b()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L3050b()">Left</button></td><td>  (3050 Broach)</td><td>  <button onclick="R3050b()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L5710b()">Left</button> </td><td> (5710 Broach)</td><td>  <button onclick="R5710b()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L9341()">Left</button> </td><td> (9341 INSP) </td><td> <button onclick="R9341()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L934130()">Left</button> </td><td> (9341 OP30) </td><td> <button onclick="R934130()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L934180()">Left</button> </td><td> (9341 OP80)</td><td>  <button onclick="R934180()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L9341110()">Left</button> </td><td> (9341 OP110) </td><td> <button onclick="R9341110()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L0455()">Left</button></td><td>  (0455 INSP) </td><td> <button onclick="R0455()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L521430()">Left</button> </td><td> (5214 OP30) </td><td> <button onclick="R521430()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L321430()">Left</button> </td><td> (3214 OP30)</td><td>  <button onclick="R321430()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L867080()">Left</button></td><td>  (8670 OP80) </td><td> <button onclick="R867080()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L540480()">Left</button> </td><td> (5404 OP80) </td><td> <button onclick="R540480()">Right</button>
+</td></tr><tr><td>
+	<button onclick="L540180()">Left</button> </td><td> (5401 OP80) </td><td> <button onclick="R540180()">Right</button>
+</td></tr></table>
 	</div>
 	
 	
