Added assets to Q numbers for Tech EPV list

--- a/trakberry/templates/tech.html
+++ b/trakberry/templates/tech.html
@@ -248,7 +248,7 @@
 	<div class="comment6"></div>
 	<div class="comment7" style="font-size:15px;font-weight: bold;background-color:#c7bb75;border-style: solid;border-width: 1px;border-color: #000000;border-radius: 5px;padding-left: 5px;">
 		<a href="{{request.session.local_toggle}}/tech_epv/get/{{ i.0 }}" style="color:rgb(0, 0, 0);">
-		{{i.0}} - {{i.1}} -- {{i.2}}</a></div>
+		{{i.0}} ({{i.3}}) - {{i.1}} -- {{i.2}}</a></div>
 	<div class="comment6"></div>
 	<div class="comment55"></div>
 	{% endfor %}
