--- a/trakberry/templates/kiosk/kiosk_epv_entry.html
+++ b/trakberry/templates/kiosk/kiosk_epv_entry.html
@@ -83,7 +83,7 @@ mark {
 <div class="grid-container">
 	<div class="item2"> </div>
 	<div class="item2"> </div>
-	<div class="item2"><font class="mark3" color="#000000" size ="6"></b>EPV_Checks</b></font></div>
+	<div class="item2"><font class="mark3" color="#000000" size ="6"></b>EPV Checks</b></font></div>
 	<div class="item2"> </div>
 	<div class="item2"> </div>
 
