Added EPV Completion Pie Chart

--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -38,7 +38,7 @@
 												<ul class="dropdown-menu" style="background-color:#d3ded4;">
 													<li class="dropdown-submenu">
 														<li><a href="#">TMP Report</a></li>
-														<li><a href="#">EPV Report</a></li>
+														<li><a href="{{request.session.local_toggle}}/pie_chart">EPV Report</a></li>
 														<li><a href="{{request.session.local_toggle}}/tpm_display">Edit TPM Assets</a></li>
 														<li><a href="{{request.session.local_toggle}}/tpm_assets">Edit EPVs</a></li>
 													</li>
