--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -31,11 +31,7 @@
 
 
 .navbar-default {
-    background-color:#A1D490;
-    border-color:aqua;
-    
-}
-
+    background-color:#A1D490;,''
 .dropdown-submenu {
     position: relative;
 }
@@ -104,7 +100,7 @@
 	<style type="text/css">
 		.mainset{color:black;text-align:center;float:left;width:100%}
 		.wrapper_main {background:chartreuse;width:90%;margin-left: 10px;}
-		.frame1 {color:black;text-align:center;float:left;width:51%;margin-bottom: 5px;}
+		.frame1 {color:black;text-align:center;float:left;width:33%;margin-bottom: 5px;}
 		.frame1_u {color:black;text-align:center;background:rgb(214, 214, 214);float:left;width:60%;margin: 20px;}
 		.frame2{color:black;text-align:center;background:rgb(83, 134, 202);float:left;width:49%;position:relative;left:5px;margin-bottom: 5px;}
 		.frame3 {color:black;text-align:center;background:rgb(61, 138, 64);float:left;width:51%;position:relative;}
@@ -122,6 +118,31 @@
 		.body3t{color:black;text-align:center;background:rgb(187, 186, 184);float:left;font-size:medium;width:99%;border: .4px solid rgb(0, 0, 0)}
 	</style>
 
+<!-- Table format -->
+<style>
+	#prod24 {
+		font-family: Arial, Helvetica, sans-serif;
+		border-collapse: collapse;
+		width: 100%;
+	}
+	
+	#prod24 td, #prod24 th {
+		border: 1px solid rgb(136, 134, 134);
+		padding: 8px;
+	}
+	
+	#prod24 tr:nth-child(even){background-color: #f8e996;}
+	#prod24 tr:nth-child(odd){background-color: #e2cc4e;}
+	#prod24 tr:hover {background-color: #ddd;}
+	
+	#prod24 th {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		background-color: rgb(139, 128, 107);
+		color: white;
+	}
+	</style>
 
 
 </head>
@@ -217,7 +238,34 @@
 		<div class="wrapper_main">
 			<div class="frame1">  <!-- Default is L24 hr Production-->
 				{% block frame1 %}
+				<table id="prod24">
+					<tr>
+						<th colspan="5"><center>24HR Production (7am - 7am)</center></th>
+					</tr>
+					<tr>
+						<th><center>Part</center></th>
+						<th><center>Finished</center></th>
+						<th colspan="3"><center>Operations</center></th>
+
+					
+					{% for i in request.session.data3 %}
+					
+						{% if i.2 = 1 %}
+							</tr><tr>
+							<td><b>{{i.0}}</b></td>
+							<td><u>{{i.3}}</u><br><center>{{i.1}}</center></td>
+						{% else %}
+							{% if i.1 = 0 %}
+								<td>&nbsp;&nbsp;&nbsp;</td>
+							{% else %}
+								<td><u>{{i.3}}</u><br><center>{{i.1}}</center></td>
+							{% endif %}
+						{% endif %}
+					{% endfor %}
+					</tr>
+				</table>
 				{% endblock %}
+			
 			</div>
 			<div class="frame2">  <!-- Default is L24hr scrap -->
 				{% block frame2 %}
