working on the EPV Pie chart.  still night perfect

--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -240,7 +240,7 @@
 				{% block frame1 %}
 				<table id="prod24">
 					<tr>
-						<th colspan="5"><center>24HR Production (7am - 7am)</center></th>
+						<th colspan="5"><center><font style="font-weight:bolder;font-size:x-large;">24HR Production (7am - 7am)</font></center></th>
 					</tr>
 					<tr>
 						<th><center>Part</center></th>
