fixed quality lables

--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -32,8 +32,9 @@
 										<ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
 											<li><a href="{{request.session.local_toggle}}/scrap_display_24hr">Last 24hrs</a></li>
 											<li><a href="{{request.session.local_toggle}}/scrap_display_date_pick">Interval</a></li>
+											<li><a href="{{request.session.local_toggle}}/pie_chart">EPV Report</a></li>
 
-											<li class="dropdown-submenu">
+											<!-- <li class="dropdown-submenu">
 												<a href="#" class="dropdown-toggle" data-toggle="dropdown">TPM / EPV</a>
 												<ul class="dropdown-menu" style="background-color:#d3ded4;">
 													<li class="dropdown-submenu">
@@ -43,7 +44,7 @@
 														<li><a href="{{request.session.local_toggle}}/tpm_assets">Edit EPVs</a></li>
 													</li>
 												</ul>
-											</li>
+											</li> -->
 
 										</ul>
 									</li>
