--- a/trakberry/templates/scrap_mgmt.html
+++ b/trakberry/templates/scrap_mgmt.html
@@ -49,6 +49,13 @@
 										</ul>
 									</li>
 									<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+									
+									<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Training<b class="caret"></b></a>
+										<ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
+											<li><a href="{{request.session.local_toggle}}/training_matrix3">Training Matrix</a></li>
+										</ul>
+									</li>
+									<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 
 									<li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span>Edits<b class="caret"></b></a>
 										<ul class="dropdown-menu multi-level"  style="background-color:{{request.session.main_menu_color}}" >
