--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -118,24 +118,46 @@
 		.body3t{color:black;text-align:center;background:rgb(187, 186, 184);float:left;font-size:medium;width:99%;border: .4px solid rgb(0, 0, 0)}
 	</style>
 
-<!-- Table format -->
+<!-- Table format for 24hrs-->
 <style>
 	#prod24 {
 		font-family: Arial, Helvetica, sans-serif;
 		border-collapse: collapse;
 		width: 100%;
 	}
-	
 	#prod24 td, #prod24 th {
 		border: 1px solid rgb(136, 134, 134);
 		padding: 8px;
 	}
-	
 	#prod24 tr:nth-child(even){background-color: #f8e996;}
 	#prod24 tr:nth-child(odd){background-color: #e2cc4e;}
 	#prod24 tr:hover {background-color: #ddd;}
 	
 	#prod24 th {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		background-color: rgb(139, 128, 107);
+		color: white;
+	}
+	</style>
+
+<!-- Table format for Week Production to Date-->
+<style>
+	#prodwk {
+		font-family: Arial, Helvetica, sans-serif;
+		border-collapse: collapse;
+		width: 100%;
+	}
+	#prodwk td, #prod24 th {
+		border: 1px solid rgb(136, 134, 134);
+		padding: 8px;
+	}
+	#prodwk tr:nth-child(even){background-color: #f8e996;}
+	#prodwk tr:nth-child(odd){background-color: #e2cc4e;}
+	#prodwk tr:hover {background-color: #ddd;}
+	
+	#prodwk th {
 		padding-top: 12px;
 		padding-bottom: 12px;
 		text-align: left;
