modified format a bit

--- a/trakberry/templates/quality_epv_asset_entry.html
+++ b/trakberry/templates/quality_epv_asset_entry.html
@@ -11,6 +11,7 @@
 <tr><th bgcolor="#c8c9b9"><center>
 <font color="#000000" size ="4">Asset Number <br>
 <input style="font-size:14px;width:320px;height:30px;" name="asset" type="textarea">
+<br><br>
 </th></tr>
 
 
@@ -18,7 +19,7 @@
 
 &nbsp;&nbsp;&nbsp;&nbsp;
 
-<input style="text-align: left;width:200px;height:40px;font-size: 18px;border-style: solid;border-color:#A1A1A1;border-radius: 10px;" type="submit" value="              Enter">
+<input style="text-align: left;width:190px;height:30px;font-size: 18px;border-style: solid;background-color: rgb(133, 133, 133);border-color:#636060;border-radius: 10px;" type="submit" value="              Enter">
 </th></tr>
 
 </table>
